--- a/index.Rmd
+++ b/index.Rmd
@@ -276,7 +276,7 @@ rmd2rscript("LECTURE12.Rmd")
 
 rmd2rscript("LECTURE9.Rmd")
 rmd2rscript("LECTURE10.Rmd")
-rmd2rscript("FigureDemo.Rmd")
+# rmd2rscript("FigureDemo.Rmd")
 
 rmd2rscript("PVA1_421.Rmd")
 rmd2rscript("PVA3_421.Rmd")
