--- a/LAB6.Rmd
+++ b/LAB6.Rmd
@@ -210,7 +210,8 @@ Finally, imagine that this metapopulation represents the last remaining patches 
 i. Improve the intervening, or "matrix", habitat, effectively doubling the maximum dispersal distance (individuals are able to disperse more effectively over longer distances). [see note above about how to change the maximum dispersal distance]         
 ii. Improve existing habitats, doubling the mean per-patch carrying capacity (labeled "Mean K per population").       
 iii. Restore habitat, effectively doubling the number of patches (labeled "metapopulation").           
-Which management strategy would be most effective for ensuring that the metapopulation does not go extinct? Please justify your answer.   
+
+5c. Which management strategy would be most effective for ensuring that the metapopulation does not go extinct? Please justify your answer.   
 
 
 ## Checklist for Lab 6 completion
